...
    val isFirstLaunch by mainViewModel.isFirstLaunch.collectAsState()
    val startDestination = if (isFirstLaunch) "Welcome" else "Main"

    val selectedTheme by mainViewModel.selectedTheme.collectAsState()

    val currentRoute = navController.currentBackStackEntryAsState().value?.destination?.route
    val showBottomBar = currentRoute in setOf("Main", "Data", "Settings", "ema_response/{promptRowId}")

    Scaffold(
        containerColor = PageBackground,
        bottomBar = {
            if (showBottomBar) {
                Column {
...
